force-app/main/default/objects/Abstract__c/Abstract__c.object-meta.xml
<CustomObject>
    <label>Abstract</label>
    <nameField>
        <displayFormat>A-{YY}-{00000}</displayFormat>
        <label>Abstract</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Abstracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>