force-app/main/default/objects/Abstract__c/fields/Abstract_Presenter__c.field-meta.xml
<CustomField>
    <fullName>Abstract_Presenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Abstract Presenter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Abstracts (Abstract Presenter)</relationshipLabel>
    <relationshipName>Abstracts</relationshipName>
    <type>Lookup</type>
</CustomField>