force-app/main/default/objects/Abstract__c/fields/Abstract_Topic__c.field-meta.xml
<CustomField>
    <fullName>Abstract_Topic__c</fullName>
    <label>Abstract Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Topics_of_interest</valueSetName>
    </valueSet>
</CustomField>