force-app/main/default/objects/Abstract__c/fields/Added_Authors__c.field-meta.xml
<CustomField>
    <fullName>Added_Authors__c</fullName>
    <label>Added Authors</label>
    <summaryForeignKey>Abstract_Author__c.Abstract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>