force-app/main/default/objects/Abstract__c/fields/Assigned_Reviewers__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Reviewers__c</fullName>
    <label>Assigned Reviewers</label>
    <summaryFilterItems>
        <field>Abstract_Review__c.Stage__c</field>
        <operation>notEqual</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>Abstract_Review__c.Abstract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>