force-app/main/default/objects/Abstract__c/fields/Author_Details__c.field-meta.xml
<CustomField>
    <fullName>Author_Details__c</fullName>
    <label>Author Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>