force-app/main/default/objects/Abstract__c/fields/Authors_consent__c.field-meta.xml
<CustomField>
    <fullName>Authors_consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Authors consent</label>
    <type>Checkbox</type>
</CustomField>