force-app/main/default/objects/Abstract__c/fields/Average_Grade__c.field-meta.xml
<CustomField>
    <fullName>Average_Grade__c</fullName>
    <formula>SUM_Abstract_Reviews__c /  COUNT_Abstract_Reviews__c</formula>
    <label>Average Grade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>