force-app/main/default/objects/Abstract__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <type>TextArea</type>
</CustomField>