force-app/main/default/objects/Abstract__c/fields/Bursary__c.field-meta.xml
<CustomField>
    <fullName>Bursary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I wish to apply for a bursary</label>
    <type>Checkbox</type>
</CustomField>