force-app/main/default/objects/Abstract__c/fields/Bursary_accepted__c.field-meta.xml
<CustomField>
    <fullName>Bursary_accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bursary accepted</label>
    <type>Checkbox</type>
</CustomField>