force-app/main/default/objects/Abstract__c/fields/Conclusion__c.field-meta.xml
<CustomField>
    <fullName>Conclusion__c</fullName>
    <label>Conclusion</label>
    <type>TextArea</type>
</CustomField>