force-app/main/default/objects/Abstract__c/fields/Copyright__c.field-meta.xml
<CustomField>
    <fullName>Copyright__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copyright</label>
    <type>Checkbox</type>
</CustomField>