force-app/main/default/objects/Abstract__c/fields/COUNT_Abstract_Reviews__c.field-meta.xml
<CustomField>
    <fullName>COUNT_Abstract_Reviews__c</fullName>
    <label># Submitted Reviews</label>
    <summaryFilterItems>
        <field>Abstract_Review__c.Stage__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Abstract_Review__c.Grade__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Abstract_Review__c.Abstract__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>