force-app/main/default/objects/Abstract__c/fields/Disclosure__c.field-meta.xml
<CustomField>
    <fullName>Disclosure__c</fullName>
    <label>Disclosure</label>
    <length>240</length>
    <type>Text</type>
</CustomField>