force-app/main/default/objects/Abstract__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Event</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only select Congress events.</errorMessage>
        <filterItems>
            <field>Event__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Congress</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Abstracts</relationshipLabel>
    <relationshipName>Abstracts</relationshipName>
    <type>Lookup</type>
</CustomField>