force-app/main/default/objects/Abstract__c/fields/Image1__c.field-meta.xml
<CustomField>
    <fullName>Image1__c</fullName>
    <formula>IMAGE(&quot;/sfc/servlet.shepherd/version/download/&quot;+Image_1_ID__c, &quot;No Image&quot;,240,320 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image1</label>
    <type>Text</type>
</CustomField>