force-app/main/default/objects/Abstract__c/fields/Image_1__c.field-meta.xml
<CustomField>
    <fullName>Image_1__c</fullName>
    <label>Image 1</label>
    <length>240</length>
    <type>Text</type>
</CustomField>