force-app/main/default/objects/Abstract__c/fields/Image_1_Caption__c.field-meta.xml
<CustomField>
    <fullName>Image_1_Caption__c</fullName>
    <label>Image 1 Caption</label>
    <length>240</length>
    <type>Text</type>
</CustomField>