force-app/main/default/objects/Abstract__c/fields/Image_1_ID__c.field-meta.xml
<CustomField>
    <fullName>Image_1_ID__c</fullName>
    <label>Image 1 ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>