force-app/main/default/objects/Abstract__c/fields/Image_2_Caption__c.field-meta.xml
<CustomField>
    <fullName>Image_2_Caption__c</fullName>
    <label>Image 2 Caption</label>
    <length>240</length>
    <type>Text</type>
</CustomField>