force-app/main/default/objects/Abstract__c/fields/Image_3_ID__c.field-meta.xml
<CustomField>
    <fullName>Image_3_ID__c</fullName>
    <label>Image 3 ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>