force-app/main/default/objects/Abstract__c/fields/Image_3_Location__c.field-meta.xml
<CustomField>
    <fullName>Image_3_Location__c</fullName>
    <label>Image 3 Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Public_Abstract_Sections</valueSetName>
    </valueSet>
</CustomField>