force-app/main/default/objects/Abstract__c/fields/Introduction__c.field-meta.xml
<CustomField>
    <fullName>Introduction__c</fullName>
    <label>Introduction</label>
    <type>TextArea</type>
</CustomField>