force-app/main/default/objects/Abstract__c/fields/Late_Breaking_Submission__c.field-meta.xml
<CustomField>
    <fullName>Late_Breaking_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Late Breaking Submission</label>
    <type>Checkbox</type>
</CustomField>