force-app/main/default/objects/Abstract__c/fields/Methods__c.field-meta.xml
<CustomField>
    <fullName>Methods__c</fullName>
    <label>Methods</label>
    <type>TextArea</type>
</CustomField>