force-app/main/default/objects/Abstract__c/fields/Originality__c.field-meta.xml
<CustomField>
    <fullName>Originality__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Originality</label>
    <type>Checkbox</type>
</CustomField>