force-app/main/default/objects/Abstract__c/fields/Presenter__c.field-meta.xml
<CustomField>
    <fullName>Presenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Presenter</label>
    <referenceTo>Presenter__c</referenceTo>
    <relationshipLabel>Abstracts</relationshipLabel>
    <relationshipName>Abstracts</relationshipName>
    <type>Lookup</type>
</CustomField>