force-app/main/default/objects/Abstract__c/fields/Presenter_City__c.field-meta.xml
<CustomField>
    <fullName>Presenter_City__c</fullName>
    <label>Presenter City</label>
    <length>120</length>
    <type>Text</type>
</CustomField>