force-app/main/default/objects/Abstract__c/fields/Presenter_Country__c.field-meta.xml
<CustomField>
    <fullName>Presenter_Country__c</fullName>
    <label>Presenter Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>