force-app/main/default/objects/Abstract__c/fields/Presenter_Department__c.field-meta.xml
<CustomField>
    <fullName>Presenter_Department__c</fullName>
    <label>Presenter Department</label>
    <length>120</length>
    <type>Text</type>
</CustomField>