force-app/main/default/objects/Abstract__c/fields/Presenter_Email__c.field-meta.xml
<CustomField>
    <fullName>Presenter_Email__c</fullName>
    <label>Presenter Email</label>
    <type>Email</type>
</CustomField>