force-app/main/default/objects/Abstract__c/fields/Presenter_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Presenter_First_Name__c</fullName>
    <label>Presenter First Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>