force-app/main/default/objects/Abstract__c/fields/Presenter_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Presenter_Last_Name__c</fullName>
    <label>Presenter Last Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>