force-app/main/default/objects/Abstract__c/fields/Required_number_of_reviewers__c.field-meta.xml
<CustomField>
    <fullName>Required_number_of_reviewers__c</fullName>
    <formula>IF(Late_Breaking_Submission__c  = false, Event__r.Number_of_Reviewers__c,
IF( Late_Breaking_Submission__c  = true, Event__r.Number_of_Reviewers_Late_Breaking__c, 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required number of reviewers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>