force-app/main/default/objects/Abstract__c/fields/Results__c.field-meta.xml
<CustomField>
    <fullName>Results__c</fullName>
    <label>Results</label>
    <type>TextArea</type>
</CustomField>