force-app/main/default/objects/Abstract__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Session</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a session that is part of the selected event.</errorMessage>
        <filterItems>
            <field>Session__c.Event_custom__c</field>
            <operation>equals</operation>
            <valueField>$Source.Event__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Abstracts</relationshipLabel>
    <relationshipName>Abstracts</relationshipName>
    <type>Lookup</type>
</CustomField>