force-app/main/default/objects/Abstract__c/fields/Submitted_After_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Submitted_After_Deadline__c</fullName>
    <formula>Date_Submitted__c &gt; Event__r.Abstract_Submission_Deadline__c</formula>
    <label>Submitted After Deadline</label>
    <type>Checkbox</type>
</CustomField>