force-app/main/default/objects/Abstract__c/fields/Submitter__c.field-meta.xml
<CustomField>
    <fullName>Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Abstract Submissions</relationshipLabel>
    <relationshipName>Abstract_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>