force-app/main/default/objects/Abstract__c/fields/SUM_Abstract_Reviews__c.field-meta.xml
<CustomField>
    <fullName>SUM_Abstract_Reviews__c</fullName>
    <label>SUM Submited Reviews</label>
    <summarizedField>Abstract_Review__c.Grade__c</summarizedField>
    <summaryFilterItems>
        <field>Abstract_Review__c.Stage__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </summaryFilterItems>
    <summaryForeignKey>Abstract_Review__c.Abstract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>