force-app/main/default/objects/Abstract__c/fields/Tournament__c.field-meta.xml
<CustomField>
    <fullName>Tournament__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tournament</label>
    <type>Checkbox</type>
</CustomField>