force-app/main/default/objects/Abstract__c/fields/Tournament_Basic__c.field-meta.xml
<CustomField>
    <fullName>Tournament_Basic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Participate in the Tournament Basic</label>
    <type>Checkbox</type>
</CustomField>