force-app/main/default/objects/Abstract__c/fields/Tournament_Clinical__c.field-meta.xml
<CustomField>
    <fullName>Tournament_Clinical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Participate in the Tournament Clinical</label>
    <type>Checkbox</type>
</CustomField>