force-app/main/default/objects/Abstract__c/recordTypes/Invited_Submission.recordType-meta.xml
<RecordType>
    <fullName>Invited_Submission</fullName>
    <active>true</active>
    <label>Invited Submission</label>
</RecordType>