force-app/main/default/objects/Abstract__c/recordTypes/Public_Submission.recordType-meta.xml
<RecordType>
    <fullName>Public_Submission</fullName>
    <active>true</active>
    <label>Public Submission</label>
</RecordType>