force-app/main/default/objects/Abstract__c/validationRules/Submission_Deadline.validationRule-meta.xml
<ValidationRule>
    <fullName>Submission_Deadline</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK($User.ContactId))&amp;&amp;
ISCHANGED(Stage__c)&amp;&amp;
ISPICKVAL(Stage__c, &quot;Submitted&quot;)&amp;&amp;
Event__r.Abstract_Submission_Deadline__c &lt;= $System.OriginDateTime</errorConditionFormula>
    <errorMessage>You cannot submit your abstract after the submission deadline.</errorMessage>
</ValidationRule>