force-app/main/default/objects/Abstract__c/listViews/Accepted_Abstracts.listView-meta.xml
<ListView>
    <fullName>Accepted_Abstracts</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Abstract_Topic__c</columns>
    <columns>Event__c</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Submitter__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Abstract_Presenter__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <label>Accepted Abstracts</label>
</ListView>