force-app/main/default/objects/Abstract__c/listViews/Invited_Submissions.listView-meta.xml
<ListView>
    <fullName>Invited_Submissions</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Event__c</columns>
    <columns>Session__c</columns>
    <columns>Type__c</columns>
    <columns>Title__c</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <columns>Submitter__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Abstract__c.Invited_Submission</value>
    </filters>
    <label>Invited Submissions</label>
</ListView>