force-app/main/default/objects/Abstract__c/listViews/My_Abstract_Submissions.listView-meta.xml
<ListView>
    <fullName>My_Abstract_Submissions</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Event__c</columns>
    <columns>Session__c</columns>
    <columns>Type__c</columns>
    <columns>Title__c</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Abstract Submissions</label>
</ListView>