force-app/main/default/objects/Abstract__c/listViews/Public_Submissions.listView-meta.xml
<ListView>
    <fullName>Public_Submissions</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Event__c</columns>
    <columns>Session__c</columns>
    <columns>Type__c</columns>
    <columns>Title__c</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <columns>Submitter__c</columns>
    <columns>Assigned_Reviewers__c</columns>
    <columns>Required_number_of_reviewers__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Abstract__c.Public_Submission</value>
    </filters>
    <label>Public Submissions</label>
</ListView>