force-app/main/default/objects/Abstract__c/listViews/Submitted_after_Deadline.listView-meta.xml
<ListView>
    <fullName>Submitted_after_Deadline</fullName>
    <columns>NAME</columns>
    <columns>Abstract_Presenter__c</columns>
    <columns>Abstract_Topic__c</columns>
    <columns>Date_Submitted__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_Submitted__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Submitted after Deadline</label>
</ListView>